# AYS2

./: .gitmodules  ACTION_PLAN_NEXT_STEPS.md  AIRPLAY_CASTING_FEATURE_SPEC.md  ARCHITECTURE.md  BUILD_FIX_INVESTIGATION_REPORT.md  BUILD_INVESTIGATION_164_165.md  CASTING_FINAL_STATUS.txt  CASTING_IMPLEMENTATION_CHECKLIST.md  CASTING_IMPLEMENTATION_GUIDE.md  CASTING_INTEGRATION_COMPLETE.md  CASTING_OPTIMIZATION_FINAL.md  CASTING_PHASE_1_COMPLETE.txt  CASTING_PHASE_1_STATUS.md  CASTING_PHASE_2_STATUS_VIDEO_ENCODER.md  CASTING_QUICK_START.md  CASTING_SYSTEM_COMPLETE.md  CASTING_SYSTEM_SUMMARY.md  CHANGELOG.md  COMMIT_MESSAGE.txt  CONTRIBUTING.md  CONTRIBUTORS.md  CORRECT_IOS_MIGRATION_PLAN.md  FINAL_DELIVERY_SUMMARY.txt  GIT_COMMIT_OPTIMIZATION_COMPLETE.txt  GIT_COMMIT_PHASE_2_COMPLETE.txt  GIT_COMMIT_READY.md  HYBRID_CASTING_ARCHITECTURE.md  HYBRID_CASTING_PHASE_2_COMPLETE.md  IMPLEMENTATION_COMPLETE.txt  INVESTIGATION_SUMMARY.md  INVESTIGATION_SUMMARY_FINAL.md  MIGRATION_COMPLETE.md  MIGRATION_COMPLETION_STATUS.md  MIGRATION_STATUS.md  PERFORMANCE_OPTIMIZATIONS.md  PHASE_2_AIRPLAY_IMPLEMENTATION.md  PHASE_2_BUILD_INSTRUCTIONS.md  PHASE_2_COMMIT_MESSAGE.txt  PHASE_2_COMPLETE_SUMMARY.md  PHASE_2_INDEX.md  (+21 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.well-known/: security.txt
analytics/: README.md
cmake/: Pcsx2Utils.cmake
docs/: ARMSX2_MIGRATION.md  AYS2_OVERLAY.md  AYS2_PLAY_OVERLAY.md  AYS3_PS3_FEASIBILITY.md  ELORIS_OVERLAY.md  MASTER_MIGRATION_CHECKLIST.md  MIGRATION_STRATEGY_V2.6.0.5.md  QUICK_START_MIGRATION.md
scripts/: ays2-overlay.sh  eloris-overlay.sh  gen-app-icon.py
src/cpp/Casting/: AirPlayFrameCapture.h  AirPlayFrameCapture.mm  AirPlayManager.h  AirPlayManager.mm  AirPlayNetworkTransport.h  AirPlayNetworkTransport.mm  AirPlayProtocol.h  AirPlayProtocol.mm  CMakeLists.txt  CVPixelBufferPoolManager.h  CVPixelBufferPoolManager.mm  CastingBridge.h  CastingBridge.mm  CastingDevice.cpp  CastingDevice.h  CastingIntegration.cpp  CastingIntegration.h  CastingManager.cpp  CastingManager.h  CastingTestSuite.cpp  CastingTestSuite.h  CastingUIOverlay.cpp  CastingUIOverlay.h  DLNAManager.cpp  DLNAManager.h  FramePacingController.h  FramePacingController.mm  GoogleCastManager.cpp  GoogleCastManager.h  GoogleCastManager.mm  PlatformImpl.cpp  PlatformImpl.h  VideoEncoder.h  VideoEncoder.mm  WebRTCManager.cpp  WebRTCManager.h
(+322 files in other folders)
